tests/baselines/reference/FunctionDeclaration3.errors.txt
==== tests/cases/compiler/FunctionDeclaration3.ts (1 errors) ====
    function foo();
    ~~~~~~~~
!!! FunctionDeclaration3.ts(1,1): error TS2238: Function implementation expected.